<resources>
    <string name="app_name">FindYourFriend</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="display_name">Name</string>
    <string name="map">map</string>
    <string name="log_out">Log out</string>
    <string name="failed_login">Log in failed</string>
    <string name="failed_reg">Registration failed</string>
    <string name="not_valid_email">Not valid email</string>
    <string name="input_password">input password</string>
    <string name="input_name">input name</string>
    <string name="not_equals">passwords not equals</string>
    <string name="title_activity_maps">Map</string>
    <string name="friends">Friends</string>
    <string name="search_friends">Search for friends</string>
    <string name="find">find</string>
    <string name="input_value">input value</string>
    <string name="to_list">Friends list</string>
    <string name="pin">Pin</string>
    <string name="friend_view_active">This user is available for display on the map.</string>
    <string name="friend_view_not_active">To activate the user enter the pin code.</string>
    <string name="about">About</string>
    <string name="your_pin">Your pin code:</string>
    <string name="wrong_pin">Wrong pin</string>
</resources>
