<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.ContentFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/authorizedLayout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <android.support.v7.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/email"
                android:id="@+id/emailEditText"/>

        <android.support.v7.widget.AppCompatEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/password"
                android:id="@+id/passwordEditText"/>

        <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:id="@+id/loginButton"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/registrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:layout_marginTop="16dp"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/notAuthorizedLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="24dp">

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/second_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/black"/>

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@android:color/black"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"/>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/logOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.ContentFrameLayout>