<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.AboutActivity">

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp">


        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/friendViewImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="16dp"
                android:visibility="visible"
                android:src="@drawable/ic_user_default"/>

        <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp">

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/myNameView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:hint="@string/display_name"/>

            <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/myEmailView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="italic"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:hint="@string/email"/>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/your_pin"
            android:textSize="22sp"
            android:textColor="#000"
            android:layout_margin="16dp"
            android:layout_marginTop="60dp"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/myPinView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="0000"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="#000"
            android:layout_margin="30dp"/>

</android.support.v7.widget.LinearLayoutCompat>